<resources>
    <string name="app_name">Crypto App - avaliacao</string>
    <string name="default_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac nibh nunc. Fusce sit amet molestie justo. Suspendisse vitae blandit lorem, sodales ullamcorper justo. Fusce porta, purus a congue vulputate, libero orci faucibus augue, ac feugiat libero massa at elit. Morbi ultrices ligula non arcu tincidunt sodales. Aenean mollis lacinia odio. Etiam euismod tristique nisi, vitae condimentum risus porttitor in. Duis dictum felis facilisis urna blandit consectetur. Nulla lobortis elit nisl, ut pharetra sem vulputate efficitur. Donec eleifend lacus aliquet nibh laoreet, ut pretium odio ultrices. Sed eu leo velit. Vestibulum dolor ex, efficitur id ultrices vel, fermentum posuere augue. Maecenas fermentum dui in lorem viverra, sit amet finibus mauris fermentum. Proin et massa convallis, commodo nibh sed, venenatis ipsum. Pellentesque dignissim eget enim eu tempus.</string>

    <!-- Sign in -->
    <string name="signIn_title">Bem vindo ao app crypto</string>
    <string name="signIn_subtitle">Acompanhe suas moedas favoritas</string>
    <string name="signIn_fieldHint_login">Login</string>
    <string name="signIn_fieldHint_password">Senha</string>
    <string name="signIn_button_enter">Acessar</string>
    <string name="signIn_button_signUp">Criar nova conta</string>

    <!-- Sign up -->
    <string name="signUp_appBar">Nova conta</string>
    <string name="signUp_fieldHint_login">Login</string>
    <string name="signUp_fieldHint_document">CPF</string>
    <string name="signUp_fieldHint_password">Senha</string>
    <string name="signUp_fieldHint_retypePassword">Confirmar senha</string>
    <string name="signUp_button_create">Criar conta</string>
    <string name="signUp_result_accountCreated">Conta criada com sucesso!</string>

    <!-- Home -->
    <string name="home_appBar">Bem vindo</string>
    <string name="home_appBar_signOut">Sair</string>
    <string name="home_bottomPanel_show">Visualizar:</string>
    <string name="home_bottomPanel_all">Todos</string>
    <string name="home_bottomPanel_favorites">Apenas favoritos</string>
    <string name="home_signOutDialog_title">Sair</string>
    <string name="home_action_onFavoriteAdded">%s adicionado aos favoritos</string>
    <string name="home_action_onFavoriteRemoved">%s removido dos favoritos</string>
    <string name="home_signOutDialog_message">Tem certeza que deseja desconectar?</string>
    <string name="home_signOutDialog_positive">Sair</string>
    <string name="home_signOutDialog_negative">Cancelar</string>

    <!-- Detail -->
    <string name="detail_tags">Tags</string>
    <string name="detail_team">Time</string>
    <string name="detail_invalidCoin">Erro ao receber dados da moeda, tente novamente.</string>

</resources>