<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/backgroundColor"
    tools:context=".feature.sign_in.SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signIn_imageGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signIn_cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-12dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/signIn_imageGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_sign_in" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signIn_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/externalMargin"
        android:gravity="center"
        android:text="@string/signIn_title"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/signIn_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_cardView"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signIn_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/signIn_subtitle"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/signIn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signIn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/externalMargin"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="@dimen/externalMargin"
        app:layout_constraintBottom_toTopOf="@id/signIn_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signIn_fieldHint_login"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signIn_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/externalMargin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/externalMargin"
        app:layout_constraintBottom_toTopOf="@id/signIn_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_login"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signIn_fieldHint_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/externalMargin"
        android:layout_marginTop="@dimen/externalMargin"
        android:layout_marginEnd="@dimen/externalMargin"
        android:layout_marginBottom="4dp"
        android:text="@string/signIn_button_enter"
        app:layout_constraintBottom_toTopOf="@id/signIn_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/externalMargin"
        android:layout_marginEnd="@dimen/externalMargin"
        android:layout_marginBottom="@dimen/externalMargin"
        android:background="@drawable/bg_button_transparent"
        android:text="@string/signIn_button_signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_enter" />

</androidx.constraintlayout.widget.ConstraintLayout>